syntax = "proto3";

option go_package = "grpc-server/src/infra/grpc/proto/book";

package book;

import "comm/comm.proto";

service BookRpc {
    rpc Create(CreateRequest) returns (comm.Empty) {}

    rpc UpdatePrice(UpdateRequest) returns (comm.Empty) {}

    rpc Delete(DeleteRequest) returns (comm.Empty) {}

    rpc List(comm.Empty) returns (ListReply) {}

    rpc DeleteLogList(comm.Empty) returns (DeleteLogListReply) {}
}

message CreateRequest {
    string name = 1;
    int32 price = 2;
    string user = 3;
}

message UpdateRequest {
    string name = 1;
    int32 price = 2;
}

message DeleteRequest {
    string name = 1;
    string user = 2;
}

message ListReply {
    repeated BookInfo book_info_list = 1;
}

message BookInfo {
    string name = 1;
    int32 price = 2;
    string user = 3;
}

message DeleteLogListReply {
    repeated DeleteLogInfo log_info_list = 1;
}

message DeleteLogInfo {
    string name = 1;
    string user = 2;
}